fix scroll jumping when MediaUploader form is shown

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -218,9 +218,9 @@ img.low-rating, video.low-rating, iframe.low-rating {
   max-width: 48px;
 }
 
-body.no-scroll {
+html.no-scroll {
   overflow: hidden;
-  margin-right: 18px;
+  margin-right: 16px;
 }
 
 ::-webkit-scrollbar {
